dnl Process this file with autoconf to produce a configure script.

AC_INIT(GNOME Inform 7, 0.3, http://www.inform-fiction.org)
AM_INIT_AUTOMAKE(gnome-inform7, 0.3)
AM_MAINTAINER_MODE
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

pkg_modules="gtk+-2.0 >= 2.8.0 libgnomeui-2.0 gtksourceview-1.0 gtkspell-2.0 vte" 
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])

dnl Check for the correct UUID library header location
PKG_CHECK_MODULES(UUID, ossp-uuid,
	[AC_CHECK_HEADER(ossp/uuid.h,
		AC_DEFINE([OSSP_UUID], [], [Define if the OSSP UUID header is <ossp/uuid.h>]),
		[])],
	[PKG_CHECK_MODULES(UUID, uuid,
		[AC_DEFINE([E2FS_UUID], [], [Define if uuid header is from e2fs])],
		[AC_MSG_ERROR([Either ossp-uuid or e2fsprogs uuid required.])])]
	)

dnl Check for GtkHTML 3.8 or 3.14
PKG_CHECK_MODULES(GTKHTML, libgtkhtml-3.14,
	[AC_DEFINE([GTK_HTML_314], [], [Define if using GtkHTML 3.14 API])],
	[
		AC_MSG_NOTICE([GtkHTML 3.14 not found])
		PKG_CHECK_MODULES(GTKHTML, libgtkhtml-3.8,
			[AC_DEFINE([GTK_HTML_38], [], [Define if using GtkHTML 3.8 API])],
    		[AC_MSG_ERROR([GtkHTML 3.8 or higher is required.])])
	])

PACKAGE_CFLAGS="$PACKAGE_CFLAGS $UUID_CFLAGS $GTKHTML_CFLAGS"
PACKAGE_LIBS="$PACKAGE_LIBS $UUID_LIBS $GTKHTML_LIBS"
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

dnl Add user c-flags
CFLAGS=$CFLAGS

GETTEXT_PACKAGE=gnome-inform7
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
data/Makefile
data/Compilers/Makefile
data/Documentation/Makefile
data/Documentation/doc_images/Makefile
data/Documentation/gnome/Makefile
data/Documentation/licenses/Makefile
data/Documentation/Sections/Makefile
data/Inform7/Makefile
data/Inform7/Extensions/Makefile
data/Inform7/Extensions/EmilyShort/Makefile
data/Inform7/Extensions/GrahamNelson/Makefile
data/Inform7/Extensions/Reserved/Makefile
data/Inform7/Extensions/Reserved/Templates/Makefile
data/Interpreters/Makefile
data/Library/Makefile
data/Library/Natural/Makefile
data/map_icons/Makefile
data/scene_icons/Makefile
])
